tests/ui/fail/nn32_nan.stderr
error[E0080]: evaluation panicked: nn32!: expression evaluated to NAN
 --> tests/ui/fail/nn32_nan.rs:4:13
  |
4 |     let _ = nn32!(f32::NAN);
  |             ^^^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `nn32` (in Nightly builds, run with -Z macro-backtrace for more info)
